# Predict-orange-sugar-from-images

./: .gitignore  .gitigrone  README.md  __api__.py  definitions.py  main.py  pyproject.toml  requirements.txt  security.txt
configs/: regression-mobilenetv2_0304.json
data/: data_brix_new.csv
pipeline/: pipelines.py
regression/: custom_model.py  regression_orange.py
segmentation/: segmentation_orange.py
utils/: clean_df.py  convert_json_to_df.py  convert_to_pb.py  move_file.py  standar_deviation.py
