[tool.poetry]
name = "predictorangesugar"
version = "0.1.0"
description = ""
authors = ["Nguyendai202 <forworkainguyendai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.14"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
keras = "^3.0.5"
pillow = "^10.2.0"
tensorflow = "^2.15.0"
[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
